traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:26: error: type mismatch;
 found   : Unit
 required: Boolean
       avance();
             ^Snake:22: error: type mismatch;
 found   : Unit
 required: Boolean
     if (estFaceMur()) {
     ^Snake:20: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getDirection() == Direction.OUEST)
    ^Snake:31: error: type mismatch;
 found   : Unit
 required: Boolean
  else {avance();}
              ^